--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ homepage = "https://github.com/decentriq/avato-python-client-training"
 python = "^3.6.1"
 avato = "^0.3.0"
 pandas = "^1.0.3"
+jupyter = "^1.0.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.3.1"
